STM11/.metadata/.plugins/org.eclipse.cdt.ui/Encoder.build.log
12:20:16 **** Incremental Build of configuration Debug for project Encoder ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/gpio.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/gpio.d" -MT"Core/Src/gpio.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/gpio.o"
../Core/Src/gpio.c: In function 'Return_Encoder_Count':
../Core/Src/gpio.c:74:37: error: lvalue required as left operand of assignment
   74 |             Return_Encoder_Count()  = 0;
      |                                     ^
../Core/Src/gpio.c: In function 'EXTI0_IRQHandler':
../Core/Src/gpio.c:82:8: warning: implicit declaration of function 'EXTI_GetFlagStatus' [-Wimplicit-function-declaration]
   82 |     if(EXTI_GetFlagStatus(EXTI_LINE_8)==SET)
      |        ^~~~~~~~~~~~~~~~~~
../Core/Src/gpio.c:84:9: warning: implicit declaration of function 'EXTI_ClearITPendingBit' [-Wimplicit-function-declaration]
   84 |         EXTI_ClearITPendingBit(EXTI_LINE_8);//Ê∏ÖÈô§‰∏≠Êñ≠Ê†áÂøó‰ΩçÔºå‰ª•‰æø‰∏ã‰∏ÄÊ¨°ËøõÂÖ•‰∏≠Ôø??
      |         ^~~~~~~~~~~~~~~~~~~~~~
../Core/Src/gpio.c:85:12: warning: implicit declaration of function 'GPIO_ReadInputDataBit' [-Wimplicit-function-declaration]
   85 |         if(GPIO_ReadInputDataBit(GPIOB,GPIO_PIN_8)==1)  //Â¶ÇÊûúÊ≠£ËΩ¨
      |            ^~~~~~~~~~~~~~~~~~~~~
../Core/Src/gpio.c:87:35: error: lvalue required as increment operand
   87 |             Return_Encoder_Count()++;
      |                                   ^~
../Core/Src/gpio.c: In function 'EXTI1_IRQHandler':
../Core/Src/gpio.c:101:13: error: 'Encoder_Count' undeclared (first use in this function); did you mean 'Return_Encoder_Count'?
  101 |             Encoder_Count--;
      |             ^~~~~~~~~~~~~
      |             Return_Encoder_Count
../Core/Src/gpio.c:101:13: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:37: Core/Src/gpio.o] Error 1
"make -j20 all" terminated with exit code 2. Build might be incomplete.

12:20:16 Build Failed. 4 errors, 3 warnings. (took 356ms)

